<resources>
    <string name="app_name">BeaApp</string>
    <string name="action_settings">Settings</string>
    <string name="authentication_required">Zaloguj się</string>
    <string name="username">Username:</string>
    <string name="login">login</string>
    <string name="haslo">hasło</string>
    <string name="loginButtonValue">Login</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="email">email</string>
    <string name="has_o">hasło</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="question_1">Czy odczuwałeś/łaś dziś objawy w ciągu dnia?</string>
    <string name="question_2">Czy musiałeś/łaś dziś stosować leki rozkurczające oskrzela doraźnie?</string>
    <string name="question_3">Czy budziłeś/łaś się dziś w nocy z powodu duszności?</string>
    <string name="question_4">Czy Twój stan zdrowia jakkolwiek ograniczał Twoją dzisiejszą aktywność życiową?</string>
    <string name="checkStatus">Zaloz/Zdejmij blokade</string>
    <string name="addBeacons">Dodaj swoje beacony</string>
    <string name="logout">Wyloguj się</string>
    <string name="sendData">Wyślij dane</string>
    <string name="fillSurveyText">Wypełnij ankietę</string>
    <string name="repeatPassword">powtórz hasło</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="type_beacon_id">Wpisz ID beacona</string>
    <string name="add_beacon">Dodaj beacon</string>
    <string name="delete_beacon">Usun beacon</string>
    <string name="beacon_id">ID beacona</string>
    <string name="get_back">powrót</string>
    <string name="title_activity_lock">LockActivity</string>
    <string name="maintain_locks">Zarządzaj blokadami</string>
    <string name="set_lock">Załóż blokadę</string>
    <string name="remove_lock">Zdejmij blokadę</string>
    <string name="title_activity_set_lock">SetLockActivity</string>
</resources>