<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_after_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radek.beaapp.activity.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/fillSurveyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="fillSurvey"
            android:text="@string/addBeacons" />

        <Button
            android:id="@+id/maintainLocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="maintainLocks"
            android:text="@string/maintain_locks" />

        <Button
            android:text="@string/checkStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkStatusButton"
            android:onClick="checkStatus"
            android:background="@color/colorAccent"
            android:paddingBottom="1px"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin" />

        <Button
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logoutButton"
            android:layout_weight="1"
            android:onClick="performLogout"
            android:background="@color/colorAccent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_weight="1"
        android:autoLink="web"
        android:clickable="true"
        android:onClick="getBack"
        android:text="@string/get_back"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
